@@ -6,6 +6,12 @@
 #endif
 
 %{
+// used to set import/export for Cygwin DLLs
+#ifdef WIN32
+#define USING_OBDLL
+#endif
+
+
 #include "obutil.h"
 #include "math/vector3.h"
 
