@@ -1517,6 +1517,12 @@ SWIGEXPORT void SWIG_init (CV *cv, CPerlObj *);
 #endif
 
 
+// used to set import/export for Cygwin DLLs
+#ifdef WIN32
+#define USING_OBDLL
+#endif
+
+
 #include "obutil.h"
 #include "math/vector3.h"
 
